--- a/form-pecas.html
+++ b/form-pecas.html
@@ -173,7 +173,7 @@
       <input type="date" name="dataVisita" id="dataVisita" required>
 
       <label>Filial *</label>
-      <select name="filial" required>
+      <select name="filial" id="filial" required>
         <option value="">Selecione a filial</option>
         <option value="Campos Novos">Campos Novos</option>
         <option value="Rio do Sul">Rio do Sul</option>
