--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       width: 200px;
     }
 
+    .update-popup {
+      display: none;
+    }
+
     .notification-icon {
       position: absolute;
       top: 10px;
@@ -277,7 +281,6 @@
 
 <!-- Popup de atualização -->
 <div id="update-popup" style="
-  display: none;
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
   background-color: rgba(0,0,0,0.7);
