--- a/index.html
+++ b/index.html
@@ -29,10 +29,6 @@
       width: 200px;
     }
 
-    .update-popup {
-      display: none;
-    }
-
     .notification-icon {
       position: absolute;
       top: 10px;
@@ -57,6 +53,7 @@
     }
 
     #popup {
+      display:none;
       position: fixed;
       top: 50%;
       left: 50%;
@@ -279,61 +276,38 @@
     }
   </script>
 
-<!-- Popup de atualização -->
-<div id="update-popup" style="
+<!-- Aviso de atualização -->
+<div id="update-banner" style="
+  display: none;
+  background: #ffcc00;
+  color: #000;
+  font-weight: bold;
+  padding: 12px;
+  text-align: center;
+  cursor: pointer;
   position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background-color: rgba(0,0,0,0.7);
+  top: 0;
+  left: 0;
+  right: 0;
   z-index: 9999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, sans-serif;
 ">
-  <div style="
-    background: white;
-    color: black;
-    padding: 30px;
-    border-radius: 12px;
-    text-align: center;
-    max-width: 300px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.5);
-  ">
-    <p style="font-size: 16px; font-weight: bold; margin-bottom: 20px;">
-      ⚠️ Uma nova versão está disponível.
-    </p>
-    <button id="btnAtualizar" style="
-      background-color: #00bbf9;
-      color: white;
-      border: none;
-      padding: 12px 20px;
-      border-radius: 8px;
-      font-size: 15px;
-      font-weight: bold;
-      cursor: pointer;
-    ">
-      Atualizar agora
-    </button>
-  </div>
+  ⚠️ Nova versão disponível. Clique aqui para atualizar.
 </div>
 
 <script>
   if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register("service-worker.js").then(reg => {
+      // Detecta novo SW em espera
       reg.onupdatefound = () => {
         const novoSW = reg.installing;
         novoSW.onstatechange = () => {
           if (novoSW.state === 'installed' && navigator.serviceWorker.controller) {
-            // Mostrar o popup
-            const popup = document.getElementById('update-popup');
-            popup.style.display = 'flex';
+            // Exibe banner de atualização
+            const banner = document.getElementById('update-banner');
+            banner.style.display = 'block';
 
-            const botao = document.getElementById('btnAtualizar');
-            botao.addEventListener('click', () => {
-              // Oculta popup imediatamente
-              popup.style.display = 'none';
-
-              // Envia comando para ativar o novo SW
+            banner.addEventListener('click', () => {
+              // Pede para ativar novo SW e recarrega a página
               novoSW.postMessage({ action: 'skipWaiting' });
             });
           }
@@ -341,6 +315,7 @@
       };
     });
 
+    // Recarrega a página quando o novo SW for ativado
     let refreshing = false;
     navigator.serviceWorker.addEventListener("controllerchange", () => {
       if (!refreshing) {
