--- a/index.html
+++ b/index.html
@@ -276,22 +276,25 @@
     }
   </script>
 
-<!-- Aviso de atualização -->
+<!-- Aviso de atualização centralizado -->
 <div id="update-banner" style="
   display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background: #ffcc00;
   color: #000;
   font-weight: bold;
-  padding: 12px;
-  text-align: center;
-  cursor: pointer;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+  padding: 20px 30px;
+  border-radius: 12px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
   z-index: 9999;
+  cursor: pointer;
+  text-align: center;
+  font-size: 16px;
 ">
-  ⚠️ Nova versão disponível. Clique aqui para atualizar.
+  ⚠️ Nova versão disponível<br>Clique aqui para atualizar.
 </div>
 
 <script>
