--- a/form-pecas.html
+++ b/form-pecas.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #1e1e2f;
+      background-color: #001439;
       color: white;
     }
 
