--- a/Gestores.html
+++ b/Gestores.html
@@ -48,7 +48,7 @@
     .container {
       width: 100%;
       max-width: 400px;
-      background: white;
+      background: #00205b;
       border-radius: 12px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
       overflow: hidden;
@@ -56,7 +56,7 @@
 
     .top-bar {
       height: 30px;
-      background-color: #ffffff;
+      background-color: #00205b;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
     }
