--- a/Gestores.html
+++ b/Gestores.html
@@ -48,7 +48,7 @@
     .container {
       width: 100%;
       max-width: 400px;
-      background: #00205b;
+      background: #001439;
       border-radius: 12px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.05);
       overflow: hidden;
@@ -56,7 +56,7 @@
 
     .top-bar {
       height: 30px;
-      background-color: #00205b;
+      background-color: #001439;
       border-top-left-radius: 12px;
       border-top-right-radius: 12px;
     }
@@ -69,19 +69,20 @@
       font-weight: bold;
       font-size: 18px;
       margin-bottom: 5px;
+      color: #ffffff;
     }
 
     .subtitle {
       font-size: 14px;
       margin-bottom: 20px;
-      color: #555;
+      color: #ffffff;
     }
 
     label {
       display: block;
       font-size: 12px;
       margin-bottom: 5px;
-      color: #555;
+      color: #ffffff;
     }
 
     input[type="email"],
@@ -110,7 +111,7 @@
     .login-btn {
       width: 100%;
       padding: 12px;
-      background-color: #212735;
+      background-color: #fffffff;
       border: none;
       border-radius: 6px;
       font-weight: bold;
