--- a/Gestores.html
+++ b/Gestores.html
@@ -111,11 +111,11 @@
     .login-btn {
       width: 100%;
       padding: 12px;
-      background-color: #fffffff;
+      background-color: #ffffff;
       border: none;
       border-radius: 6px;
       font-weight: bold;
-      color: white;
+      color: #001439;
       font-size: 14px;
       margin-bottom: 15px;
       cursor: pointer;
@@ -124,11 +124,11 @@
     .register-link {
       text-align: center;
       font-size: 12px;
-      color: #555;
+      color: #ffffff;
     }
 
     .register-link a {
-      color: #212735;
+      color: #ffffff;
       text-decoration: none;
     }
 
