--- a/form-pecas.html
+++ b/form-pecas.html
@@ -126,17 +126,21 @@
     }
 
     input[type="date"] {
+      width: 95%;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      margin-bottom: 15px;
+      background-color: #f1f1f1;
+      font-size: 15px;
+      color: #000;
       appearance: none;
       -webkit-appearance: none;
-      background-color: #f1f1f1;
-      color: #000;
-      padding: 12px;
-      border-radius: 8px;
-      font-size: 15px;
-      width: 100%;
-      border: none;
     }
-
+    
+    input[type="date"] {
+      width: 100%;
+    }
 
     a,
     a:visited {
