--- a/form-pecas.html
+++ b/form-pecas.html
@@ -139,6 +139,12 @@
       color: #000;
       box-sizing: border-box;
     }
+
+    .flatpickr-input {
+      padding-right: 40px !important;
+      width: 100% !important;
+      box-sizing: border-box;
+    }
         
 
     a,
