--- a/form-pecas.html
+++ b/form-pecas.html
@@ -48,6 +48,20 @@
       font-size: 15px;
     }
 
+    input[type="date"] {
+      appearance: none;
+      -webkit-appearance: none;
+      background-color: #f1f1f1;
+      color: #000;
+      padding: 12px;
+      border-radius: 8px;
+      font-size: 15px;
+      width: 95%;
+      border: none;
+      box-sizing: border-box;
+    }
+
+
     .checkbox-group {
       margin-bottom: 20px;
     }
