--- a/form-pecas.html
+++ b/form-pecas.html
@@ -188,6 +188,9 @@
       });
     </script>
 
+    <label>Data da Visita *</label>
+    <input type="text" name="dataVisita" id="dataVisita" required>
+
     <label>Filial *</label>
     <select name="filial" id="filial" required>
       <option value="">Selecione a filial</option>
