--- a/form-pecas.html
+++ b/form-pecas.html
@@ -5,9 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário - Peças</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  
   <style>
     body {
       margin: 0;
@@ -128,12 +125,18 @@
       appearance: none;
     }
 
-    .flatpickr-input {
-      padding-right: 40px !important;
-      width: 100% !important;
-      box-sizing: border-box;
+    input[type="date"] {
+      appearance: none;
+      -webkit-appearance: none;
+      background-color: #f1f1f1;
+      color: #000;
+      padding: 12px;
+      border-radius: 8px;
+      font-size: 15px;
+      width: 100%;
+      border: none;
     }
-        
+
 
     a,
     a:visited {
@@ -179,17 +182,8 @@
 
     <form onsubmit="enviarChecklist(event, 'checklistPecas')">
 
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/pt.js"></script>
-    <script>
-      flatpickr("#dataVisita", {
-        dateFormat: "d/m/Y",
-        locale: "pt",
-        defaultDate: "today"
-      });
-    </script>
-
-    <label>Data da Visita *</label>
-    <input type="text" name="dataVisita" id="dataVisita" required>
+      <label>Data da Visita *</label>
+      <input type="date" name="dataVisita" id="dataVisita" required>
 
     <label>Filial *</label>
     <select name="filial" id="filial" required>
@@ -252,6 +246,17 @@
       <button type="submit">Enviar Checklist</button>
     </form>
   </div>
+
+  <!-- Script para preencher data atual -->
+  <script>
+    window.addEventListener('DOMContentLoaded', () => {
+      const hoje = new Date();
+      const yyyy = hoje.getFullYear();
+      const mm = String(hoje.getMonth() + 1).padStart(2, '0');
+      const dd = String(hoje.getDate()).padStart(2, '0');
+      document.getElementById('dataVisita').value = ${yyyy}-${mm}-${dd};
+    });
+  </script>
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
