--- a/form-pecas.html
+++ b/form-pecas.html
@@ -248,7 +248,7 @@
       const yyyy = hoje.getFullYear();
       const mm = String(hoje.getMonth() + 1).padStart(2, '0');
       const dd = String(hoje.getDate()).padStart(2, '0');
-      document.getElementById('dataVisita').value = ${yyyy}-${mm}-${dd};
+      document.getElementById('dataVisita').value = `${yyyy}-${mm}-${dd}`;
     });
   </script>
 
