--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@
         <i class="fa-solid fa-file"></i>
         <p>Plano de Manutenção</p>
       </a>
+      <a href="Gestores.html" class="card">
+        <i class="fa-solid fa-file"></i>
+        <p>Dashboard</p>
+      </a>
     </div>
   </div>
 
