--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <p>Plano de Manutenção</p>
       </a>
       <a href="Gestores.html" class="card">
-        <i class="fa-solid fa-file"></i>
+        <i class="fa-solid fa-chart-column"></i>
         <p>Dashboard</p>
       </a>
     </div>
