--- a/Gestores.html
+++ b/Gestores.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login Gestores | Agro Divel</title>
 
-  <meta name="theme-color" content="#8B0000" />
+  <meta name="theme-color" content="#ffffff" />
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
 
   <!-- Firebase SDKs -->
