--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -196,8 +196,17 @@
     }
 
     header img {
-      height: 50px;
-      margin: 0 auto;
+      height: 40px;
+      margin-right: 15px;
+      margin-left: 0px;
+    }
+
+    #dynamic-title {
+      font-size: 15px !important;
+    }
+
+    header em {
+      font-size: 15px !important;
     }
 
     .main {
