--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -223,7 +223,7 @@
     }
 
     .card {
-      flex: 1 1 45%;
+      flex: 1 1;
       min-width: 140px;
       text-align: center;
       padding: 12px;
