--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -144,6 +144,12 @@
       transition: background 0.2s;
     }
 
+    .logo {
+      height: 80px;
+      margin-left: 45px;
+      margin-right: 15px;
+    }
+
     .acoes button:hover {
       background: #ffffff;
     }
@@ -274,7 +280,7 @@
 <body>
   <header>
     <div style="display: flex; align-items: center; justify-content: space-between;">
-      <img src="assets/logo.png" alt="Logo" style="height: 80px; margin-right: 15px; margin-left: 45px;">
+      <img src="assets/logo.png" alt="Logo" class="logo">
     <div style="flex: 1; text-align: center;">
       <em>Dashboard Agro Divel 360</em>
       <div id="dynamic-title" style="font-style: italic;">Carregando...</div>
