--- a/form-pecas.html
+++ b/form-pecas.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Formulário - Peças</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -20,7 +24,6 @@
       border-radius: 12px;
       padding: 30px;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
-      box-sizing: border-box;
     }
 
     h2 {
@@ -36,13 +39,24 @@
     }
 
     input, textarea, select {
-      width: 95%;
+      width: 100%;
       padding: 12px;
+      margin-bottom: 15px;
       border: none;
       border-radius: 8px;
-      margin-bottom: 15px;
-      background-color: #f1f1f1;
       font-size: 15px;
+      background-color: #f1f1f1;
+      color: #000;
+    }
+
+    input[type="date"],
+    select {
+      appearance: none;
+      -webkit-appearance: none;
+    }
+
+    textarea {
+      resize: vertical;
     }
 
     .checkbox-group {
@@ -50,31 +64,25 @@
     }
 
     .checkbox-group label {
-      width: 94%;
-      font-weight: normal;
       display: flex;
+      justify-content: space-between;
       align-items: center;
       gap: 10px;
       background-color: #373b50;
       padding: 12px 16px;
       border-radius: 6px;
-      margin-bottom: 10px;
+      font-weight: normal;
       font-size: 14px;
-      line-height: 1.4;
     }
 
     .checkbox-group input[type="checkbox"] {
       width: 18px;
       height: 18px;
-      margin-left: auto;
-    }
-
-    textarea {
-      resize: vertical;
+      margin: 0;
     }
 
     button {
-      width: 99%;
+      width: 100%;
       padding: 12px;
       background-color: #00bbf9;
       color: white;
@@ -83,6 +91,7 @@
       font-size: 16px;
       font-weight: bold;
       cursor: pointer;
+      transition: background-color 0.3s;
     }
 
     button:hover {
@@ -94,19 +103,11 @@
       align-items: center;
       gap: 8px;
       color: white;
-      text-decoration: none !important;
+      text-decoration: none;
       font-size: 16px;
       font-weight: bold;
       margin: 20px 0;
       transition: 0.3s;
-    }
-
-    .voltar:visited,
-    .voltar:focus,
-    .voltar:hover,
-    .voltar:active {
-      color: white;
-      text-decoration: none !important;
     }
 
     .voltar:hover {
@@ -114,60 +115,16 @@
       transform: translateX(-5px);
     }
 
-    select {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      margin-bottom: 15px;
-      background-color: #f1f1f1;
-      font-size: 15px;
-      appearance: none;
-    }
-
-    input[type="date"] {
-      appearance: none;
-      -webkit-appearance: none;
-      background-color: #f1f1f1;
-      color: #000;
-      padding: 12px;
-      border-radius: 8px;
-      font-size: 15px;
-      width: 95%;
-      border: none;
-    }
-
-
-    a,
-    a:visited {
-      color: inherit;
-      text-decoration: none;
-    }
-
     @media (max-width: 600px) {
       .container {
         max-width: 360px;
         padding: 20px;
-      }      
-
-      * {
-        box-sizing: border-box;
-      }
-
-      .checkbox-group label {
-        width: 100%;
-      }
-
-      button {
-        width: 100%;
       }
     }
   </style>
 </head>
 <body>
-
   <div class="container">
-
     <a href="index.html" class="voltar">
       <i class="fas fa-arrow-left"></i> Voltar
     </a>
@@ -175,23 +132,22 @@
     <h2>Formulário de Peças</h2>
 
     <form onsubmit="enviarChecklist(event, 'checklistPecas')">
-
       <label>Data da Visita *</label>
       <input type="date" name="dataVisita" id="dataVisita" required>
 
-    <label>Filial *</label>
-    <select name="filial" id="filial" required>
-      <option value="">Selecione a filial</option>
-      <option value="Campos Novos">Campos Novos</option>
-      <option value="Rio do Sul">Rio do Sul</option>
-      <option value="Lages">Lages</option>
-    </select>
+      <label>Filial *</label>
+      <select name="filial" id="filial" required>
+        <option value="">Selecione a filial</option>
+        <option value="Campos Novos">Campos Novos</option>
+        <option value="Rio do Sul">Rio do Sul</option>
+        <option value="Lages">Lages</option>
+      </select>
 
       <label>Nome do Cliente *</label>
-      <input type="text" name="nomeCliente" placeholder="" required>
+      <input type="text" name="nomeCliente" required>
 
       <label>Nome da Fazenda *</label>
-      <input type="text" name="nomeFazenda" placeholder="" required>
+      <input type="text" name="nomeFazenda" required>
 
       <label>Telefone *</label>
       <input type="tel" name="telefone" required>
@@ -202,7 +158,7 @@
       </select>
 
       <label>Modelo da Máquina *</label>
-      <input type="text" name="modeloMaquina" placeholder="" required>
+      <input type="text" name="modeloMaquina" required>
 
       <label>Horímetro *</label>
       <input type="text" name="horimetro" required>
@@ -217,19 +173,16 @@
           Troca de Óleo
           <input type="checkbox" name="checklist" value="oleo">
         </label>
-
         <label>
           Troca dos Filtros
           <input type="checkbox" name="checklist" value="filtros">
         </label>
-
         <label>
           Revisão
           <input type="checkbox" name="checklist" value="pneus">
         </label>
-
         <label>
-          (Itens em Geral da cabine)
+          Itens em Geral da cabine
           <input type="checkbox" name="checklist" value="cabine">
         </label>
       </div>
@@ -241,73 +194,58 @@
     </form>
   </div>
 
-  <!-- Script para preencher data atual -->
   <script>
-    window.addEventListener('DOMContentLoaded', () => {
-      const hoje = new Date();
-      const yyyy = hoje.getFullYear();
-      const mm = String(hoje.getMonth() + 1).padStart(2, '0');
-      const dd = String(hoje.getDate()).padStart(2, '0');
-      document.getElementById('dataVisita').value = `${yyyy}-${mm}-${dd}`;
-    });
-  </script>
-
-  <script>
-    window.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener("DOMContentLoaded", () => {
+      // Preenche data atual
       const hoje = new Date().toISOString().split('T')[0];
       document.getElementById('dataVisita').value = hoje;
+
+      const municipiosPorFilial = {
+        "Campos Novos": ["Campos Novos", "Abdon Batista", "Vargem", "Zortéa", "Brunópolis", "Monte Carlo", "Frei Rogério"],
+        "Rio do Sul": ["Rio do Sul", "Lontras", "Ituporanga", "Aurora", "Agrolândia", "Trombudo Central", "Laurentino", "Presidente Getúlio", "Rio do Oeste"],
+        "Lages": ["Lages", "Otacílio Costa", "Correia Pinto", "Bocaina do Sul", "São Joaquim", "Urubici", "Painel", "Capão Alto"]
+      };
+
+      const consultoresPorFilial = {
+        "Campos Novos": ["João Silva", "Maria Oliveira"],
+        "Rio do Sul": ["Carlos Souza", "Fernanda Lima"],
+        "Lages": ["Pedro Martins", "Ana Paula"]
+      };
+
+      const filialSelect = document.getElementById("filial");
+      const municipioSelect = document.getElementById("municipio");
+      const consultorSelect = document.getElementById("nomeConsultor");
+
+      municipioSelect.disabled = true;
+      consultorSelect.disabled = true;
+
+      filialSelect.addEventListener("change", () => {
+        const filial = filialSelect.value;
+
+        // Atualiza municípios
+        const municipios = municipiosPorFilial[filial] || [];
+        municipioSelect.disabled = !filial;
+        municipioSelect.innerHTML = '<option value="">Selecione um município</option>';
+        municipios.forEach((nome) => {
+          const option = document.createElement("option");
+          option.value = nome;
+          option.textContent = nome;
+          municipioSelect.appendChild(option);
+        });
+
+        // Atualiza consultores
+        const consultores = consultoresPorFilial[filial] || [];
+        consultorSelect.disabled = !filial;
+        consultorSelect.innerHTML = '<option value="">Selecione o consultor</option>';
+        consultores.forEach((nome) => {
+          const option = document.createElement("option");
+          option.value = nome;
+          option.textContent = nome;
+          consultorSelect.appendChild(option);
+        });
+      });
     });
   </script>
-
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const municipiosPorFilial = {
-      "Campos Novos": ["Campos Novos", "Abdon Batista", "Vargem", "Zortéa", "Brunópolis", "Monte Carlo", "Frei Rogério"],
-      "Rio do Sul": ["Rio do Sul", "Lontras", "Ituporanga", "Aurora", "Agrolândia", "Trombudo Central", "Laurentino", "Presidente Getúlio", "Rio do Oeste"],
-      "Lages": ["Lages", "Otacílio Costa", "Correia Pinto", "Bocaina do Sul", "São Joaquim", "Urubici", "Painel", "Capão Alto"]
-    };
-
-    const consultoresPorFilial = {
-      "Campos Novos": ["João Silva", "Maria Oliveira"],
-      "Rio do Sul": ["Carlos Souza", "Fernanda Lima"],
-      "Lages": ["Pedro Martins", "Ana Paula"]
-    };
-
-    const filialSelect = document.getElementById("filial");
-    const municipioSelect = document.getElementById("municipio");
-    const consultorSelect = document.getElementById("nomeConsultor");
-
-    municipioSelect.disabled = true;
-    consultorSelect.disabled = true;
-
-    filialSelect.addEventListener("change", () => {
-      const filial = filialSelect.value;
-
-      // Atualiza municípios
-      const municipios = municipiosPorFilial[filial] || [];
-      municipioSelect.disabled = !filial;
-      municipioSelect.innerHTML = '<option value="">Selecione um município</option>';
-      municipios.forEach((nome) => {
-        const option = document.createElement("option");
-        option.value = nome;
-        option.textContent = nome;
-        municipioSelect.appendChild(option);
-      });
-
-      // Atualiza consultores
-      const consultores = consultoresPorFilial[filial] || [];
-      consultorSelect.disabled = !filial;
-      consultorSelect.innerHTML = '<option value="">Selecione o consultor</option>';
-      consultores.forEach((nome) => {
-        const option = document.createElement("option");
-        option.value = nome;
-        option.textContent = nome;
-        consultorSelect.appendChild(option);
-      });
-    });
-  });
-</script>
-
 
   <!-- Firebase -->
   <script type="module" src="firebase.js"></script>
