--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
         <i class="fas fa-piggy-bank"></i>
         <p>Consórcio</p>
       </a>
-      <a href="#" class="card">
+      <a href="form-seguro.html" class="card">
         <i class="fa-solid fa-cloud"></i>
         <p>Seguro</p>
       </a>
-      <a href="#" class="card">
+      <a href="form-planodemanutencao.html" class="card">
         <i class="fa-solid fa-file"></i>
         <p>Plano de Manutenção</p>
       </a>
